--- a/people-app/src/index.css
+++ b/people-app/src/index.css
@@ -2,3 +2,7 @@
 :root {
   --bs-card-inner-border-radius: 20px;
 }
+.btn{
+  font-weight: 300;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
