--- a/people-app/src/index.css
+++ b/people-app/src/index.css
@@ -6,3 +6,14 @@
   font-weight: 300;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+.navbar{
+  background-color: red;
+  font-family: 'Pokemon Solid', sans-serif;
+  .nav-link{
+    color:#ffcb05;
+    font-size:30px;
+    /* text-shadow: 4px 4px 0px blue; */
+    -webkit-text-stroke: 2px#3a5ba7;
+    rotate: -15deg;
+  }
+}
