--- a/people-app/src/index.css
+++ b/people-app/src/index.css
@@ -6,3 +6,15 @@
   font-weight: 300;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.button-bar-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button-bar-container img {
+  width: 400px;
+  display: block;
+  margin: 0 auto;
+}
