Styled the card sizes; elimated stretching

--- a/people-app/src/Person.css
+++ b/people-app/src/Person.css
@@ -1,6 +1,11 @@
 .Person {
   font-family: Arial, Helvetica, sans-serif;
   padding-bottom: 10px;
+  flex-basis: 200px;
+  flex-shrink: 1;
+  flex-grow: 0;
+
+  & img {}
 
   & p,
   h3 {
